[package]
name = "intermezzos"
version = "0.1.0"
authors = ["The intermezzOS team"]
build = "build.rs"

[workspace]

[dependencies]
compiler_builtins = { git = "https://github.com/rust-lang-nursery/compiler-builtins" }
lazy_static = { version = "0.2.1", features = ["spin_no_std"] }
rlibc = "1.0.0"
spin = "0.4.5"
x86 = "0.8.1"
console = { path = "console" }
interrupts = { path = "interrupts" }
pic = { path = "pic" }
keyboard = { path = "keyboard" }
tasks = { path = "tasks" }
clock = { path = "clock" }
memory = { path = "memory" }
boot = { path = "boot" }

# [dependencies.fringe]
# version = "1.2.1"
# default-features = false

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
